# Zoetrope-Carousel-V4

./: .gitignore  README.md
Electrical/01_V3 Electrical Design/: Animation Platter_V3.kicad_pcb  Animation Platter_V3.kicad_prl  Animation Platter_V3.kicad_pro  Animation Platter_V3.kicad_sch  Connectors.kicad_sch  I2C RTC.kicad_sch  Interface.kicad_sch  Microcontroller.kicad_sch  Motor & LEDs_sch.kicad_sch  Power.kicad_sch  fp-info-cache
Electrical/01a_V4 Electrical Design/: Animation Platter_V1.kicad_prl  Animation Platter_V4.kicad_prl  Animation Platter_V4.kicad_pro  Animation Platter_V4.kicad_sch  Connectors.kicad_sch  Display and LEDs.kicad_sch  Display.kicad_sch  ESP32 Displays.kicad_sch  External to PCB 3.kicad_sch  External to PCB.kicad_sch  I2C RTC.kicad_sch  (+12 more)
Firmware/ESP32/1.43 ESP32-S3/reference exmples/Getting Started/FactoryProgram/main/: CMakeLists.txt  example_qspi_with_ram.c  heartbeat.h
Firmware/ESP32/1.43 ESP32-S3/reference exmples/Getting Started/FactoryProgram/main/ui/: ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h
Firmware/ESP32/1.91 ESP32-S3/reference examples/Fixing Figuring Things Out/main/: CMakeLists.txt  auto_scroll.c  auto_scroll.h  example_qspi_with_ram.c  heartbeat.h  packet.h  platter_ui.c  platter_ui.h  uart_protocol.c  uart_protocol.h  ui_highlight.c  ui_highlight.h
Firmware/ESP32/1.91 ESP32-S3/reference examples/Fixing Figuring Things Out/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_events.h  ui_helpers.c  ui_img_zoetrope_splash_screen2_png.c
(+498 files in other folders)
